# TicTacToeBot

./: CHANGELOG.md  Choices.md  DiscordBot.cabal  Functional_prisiples.md  README.md  cabal.project
app/: ConnectFour.hs  DataTypes.hs  ExampleUtils.hs  Main.hs  Parser.hs  TicTacToe.hs  Tokens.hs
app user ID games/: ConnectFour.hs  ExampleUtils.hs  Main.hs  TicTacToe.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/src/: gogol-d600b351233f955f.cache
