cabal-version:      2.4
name:               TicTacToeBot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Simon Andersen
maintainer:         wep014@uib.no

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable DiscordBot
    main-is:         Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  TicTacToe,
                    ExampleUtils,
                    DataTypes,
                    Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base,
                    mtl,
                    discord-haskell,
                    unliftio, 
                    text, 
                    time,
                    megaparsec,
                    matrix,
                    transformers,
                    stm,
                    bytestring,
                    containers,
                    stm,
                    MonadRandom,
                    random,
                    

    hs-source-dirs:   app
    default-language: Haskell2010
